--- a/Console.RestfulApi.Client/App.config
+++ b/Console.RestfulApi.Client/App.config
@@ -7,6 +7,7 @@
     <client>
       <endpoint name="addressService" address="http://127.0.0.1:8081" binding="webHttpBinding" contract="RestfulApi.Common.IServiceContract.IShopingInfoQuery" behaviorConfiguration="webBehav"/>
     </client>
+    <!--behavior是服务描述的一部分，描述当服务开始运行时——意即宿主open时——会发生什么。当宿主实例被创建，终结点被添加，监听器尚未启动时，程序能够修改服务描述，来定义一旦服务开始运行后的behave。如果没有定义behave，那么宿主启动毫无意义-->
     <behaviors>
       <endpointBehaviors >
         <behavior name="webBehav">
