通过配置实例ServiceHost

--- a/Console.RestfulApi.Service/App.config
+++ b/Console.RestfulApi.Service/App.config
@@ -3,4 +3,31 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  
+  <!--通过配置承载服务-->
+  <!--<system.serviceModel>
+    <services>
+      <service name="Console.RestfulApi.Service.ServiceEx.ShopingQueryService" behaviorConfiguration="shopBehavior">
+        <endpoint address="http://127.0.0.1:8081" binding="webHttpBinding" contract="RestfulApi.Common.IServiceContract.IShopingInfoQuery" behaviorConfiguration="web"></endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://127.0.0.1:8081/"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+    
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="shopBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetUrl="shoppingservice/msdl"/>
+        </behavior>
+      </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp helpEnabled="true"/>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+  </system.serviceModel>-->
 </configuration>
